# identity

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  README.rst  alembic.ini  docker-compose.yml  pyproject.toml
docs/: conf.py  identity.rst  index.rst
src/identity/: config.py
src/identity/adapters/db/: session.py
src/identity/adapters/db/migrations/: env.py
src/identity/adapters/db/migrations/versions/: 4dba542b5180_adds_user_table.py
src/identity/adapters/db/tables/: __init__.py  users.py
src/identity/adapters/repositories/: __init__.py  users.py
src/identity/api/: api.py  main.py
src/identity/api/routers/: me.py  tokens.py  users.py
src/identity/api/schemas/: users.py
src/identity/domain/: pagination.py  users.py  utils.py
src/identity/services/: __init__.py  exceptions.py  security.py  users.py
src/identity/services/uow/: users.py
tests/: conftest.py
tests/integration/adapters/db/: test_db_users.py
tests/integration/services/: test_add_user_service.py  test_get_user_service.py  test_list_users_service.py
tests/unit/: test_users.py
